リファクタリング

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,7 +8,7 @@
 
     <!-- Uncomment this if you use the TailwindCSS integration -->
     <!-- <link rel="stylesheet" href="/priv/static/app.css"> -->
-    <script type="module" src="/priv/static/study_app.mjs"></script>
+    <script type="module" src="/priv/static/app.mjs"></script>
   </head>
 
   <body>
